[project]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Sabit Kazbekov",email = "sabajora@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "soap (>=0.0.1rc0,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

